# pyrust

./: Cargo.toml  setup.py
.pyrust/: __init__.py
src/: lib.rs  pyrust-lib.rs
