[package]
name = "pyrust"
version = "0.1.0"
authors = ["Justis <justis710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.12.3", feature = ["extension-module"] }
primal = "0.3.0"

[lib]
name = "pyrust"
crate-type = ["cdylib"]
